// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rls_membership_type_select 1`] = `
Object {
  "deparse": "SELECT mt.id FROM v_schema_name.v_table_name AS mt WHERE mt.name = 'Organization'",
}
`;

exports[`rls_policy_permission_mask_select 1`] = `
Object {
  "deparse": "SELECT v_schema_name.v_function_name(ARRAY['Can I do this?']::citext[])",
}
`;

exports[`rls_policy_permission_mask_select 2`] = `
Object {
  "deparse": "SELECT v_schema_name.v_function_name(ARRAY['Can I do this?', 'Can I also do this']::citext[])",
}
`;

exports[`rls_policy_permission_select 1`] = `
Object {
  "deparse": "SELECT v_schema_name.v_function_name(ARRAY['Can I do this?']::citext[])",
}
`;

exports[`rls_policy_permission_select 2`] = `
Object {
  "deparse": "SELECT v_schema_name.v_function_name(ARRAY['Can I do this?', 'Can I also do this']::citext[])",
}
`;
